fixAssets changes for osx - out of sync nowrap

--- a/assets/css/shadow.css
+++ b/assets/css/shadow.css
@@ -161,6 +161,7 @@
 
 .syncing {
   color:#E3223C;
+  whitespace: nowrap;
 }
 
 .transaction-overview {
